fix(progressbar): use linear animation
Former-commit-id: ee75e4290c7440544f1704d8695f7bcfdbccd9a4

--- a/resources/[qb]/progressbar/html/css/style.css
+++ b/resources/[qb]/progressbar/html/css/style.css
@@ -72,7 +72,7 @@ body {
     width: 0;
     height: 1vh;
     transition: width 0.3s;
-    transition-timing-function: ease-out;
+    transition-timing-function: linear;
 }
 
 @keyframes slide-in {
