--- a/resources/[soz]/soz-inventory/ui/src/components/ContainerInventory/styles.module.css
+++ b/resources/[soz]/soz-inventory/ui/src/components/ContainerInventory/styles.module.css
@@ -21,15 +21,18 @@
 }
 
 .banner {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
     user-select: none;
     text-align: center;
     color: white;
     text-transform: uppercase;
     font-weight: bold;
-    padding: 2rem 0;
+    height: 4.6875rem;
     border-top-left-radius: .5rem;
     border-top-right-radius: .5rem;
-    background: url("../../assets/default.jpg") no-repeat;
+    background: url("../../assets/default.jpg") left no-repeat;
     background-size: cover;
     box-shadow: inset 0 -.5em 1em rgba(0, 0, 0, .6);
 }
@@ -66,6 +69,7 @@
 .banner > span {
     float: right;
     margin-right: 2rem;
+    margin-bottom: 1rem;
     font-size: .8rem;
     line-height: 1.2rem;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
