fix(inventory): use right banner for storage
Former-commit-id: f5f89aae111f15a8b4548d352002aed85503f838

--- a/resources/[soz]/soz-inventory/ui/src/components/ContainerInventory/styles.module.css
+++ b/resources/[soz]/soz-inventory/ui/src/components/ContainerInventory/styles.module.css
@@ -57,8 +57,8 @@
     background: url("../../assets/seizure.jpg") no-repeat;
     background-size: cover;
 }
-.storage {
-    background: url("../../assets/storage.jpg") no-repeat;
+.stash {
+    background: url("../../assets/stash.jpg") no-repeat;
     background-size: cover;
 }
 .trunk {
